--- a/exp-starter-api/.env.example
+++ b/exp-starter-api/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://postgres:root@localhost:5432/exp_starter_app_development
 TEST_DATABASE_URL=postgres://postgres:root@localhost:5432/exp_starter_app_test
+JWT_SECRET = secret
