--- a/exp-starter-api/package.json
+++ b/exp-starter-api/package.json
@@ -17,6 +17,7 @@
     "expect": "^23.6.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.4.0",
     "mocha": "^5.2.0",
     "morgan": "~1.9.0",
     "pg": "^7.6.1",
